--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
+# scala
 *.class
 *.log
+
+# sbt specific
+.cache/
+.history/
+.lib/
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
