--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,13 @@ language: scala
 scala:
   - 2.11.11
   - 2.12.3
+
+sudo: false
+cache:
+  directories:
+    - $HOME/.ivy2/cache
+    - $HOME/.sbt
+before_cache:
+  # Cleanup the cached directories to avoid unnecessary cache updates
+  - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
+  - find $HOME/.sbt        -name "*.lock"               -print -delete    
